# advent_of_code_2022

./: CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  package-lock.cmake
src/: CMakeLists.txt  utility.hpp
src/01/: CMakeLists.txt  main.cpp
src/02/: CMakeLists.txt  main.cpp
src/03/: CMakeLists.txt  main.cpp
src/04/: CMakeLists.txt  main.cpp
src/05/: CMakeLists.txt  main.cpp
src/06/: CMakeLists.txt  main.cpp
src/07/: CMakeLists.txt  main.cpp
src/08/: CMakeLists.txt  main.cpp
src/09/: CMakeLists.txt  main.cpp
src/10/: CMakeLists.txt  main.cpp
src/11/: CMakeLists.txt  main.cpp
